2012-01-06  Glenn Morris  <rgm@gnu.org>

	* emacs-lisp/bytecomp.el (byte-compile-file): Do not propagate a file
	local setting of buffer-read-only to the input buffer.  (Bug#10419)

	* calendar/calendar.el (calendar-mode):
	Locally set scroll-margin to 0.  (Bug#10379)

2012-01-06  Ulrich Mueller  <ulm@gentoo.org>

	* play/doctor.el (doctor-death): Escape "," characters.  (Bug#10370)

2012-01-05  Glenn Morris  <rgm@gnu.org>

	* eshell/em-unix.el (diff-no-select): Autoload it.
	(eshell/diff): Use diff-no-select.  (Bug#10420)

2012-01-05  Chong Yidong  <cyd@gnu.org>

	* shell.el (shell-dynamic-complete-functions): Revert last change.
	(shell-command-completion-function): New function.
	(shell-completion-vars): Use it to implement
	shell-completion-execonly (Bug#10417).

	* custom.el (enable-theme): Don't set custom-safe-themes.

	* cus-theme.el (custom-theme-merge-theme): Ignore
	custom-enabled-themes and custom-safe-themes.

2012-01-05  Michael R. Mauger  <mmaug@yahoo.com>

	* progmodes/sql.el (sql-login-hook): Add hook to respond to the
	first prompt in `sql-interacive-mode'.
	(sql-mode-oracle-font-lock-keywords): Add CONNECT_BY_* builtin
	keywords.
	(sql-mode-mysql-font-lock-keywords):  Add ELSEIF keyword.
	(sql-product-interactive): Bug fix: Set `sql-buffer' in
	context of original buffer.  Invoke `sql-login-hook'.

2012-01-04  Eli Zaretskii  <eliz@gnu.org>

	* mail/rmail.el (rmail-font-lock-keywords): Accept non-ASCII
	letters in cite-prefix.

2012-01-03  Lars Magne Ingebrigtsen  <larsi@gnus.org>

	* mail/smtpmail.el (smtpmail-stream-type): Mention the `ssl' value.

2012-01-03  Chong Yidong  <cyd@gnu.org>

	* shell.el (shell-dynamic-complete-functions): Put
	pcomplete-completions-at-point, so as to try
	comint-filename-completion first (Bug#10417).

2012-01-02  Richard Stallman  <rms@gnu.org>

	* battery.el (battery-status-function):
	Detect when to use battery-yeeloong-sysfs.
	(battery-echo-area-format): Add string for Yeeloong.